# csvio

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  LICENSE  README.md  changelog.txt  conanfile.py  main.cpp
benchmark/: CMakeLists.txt  Makefile  benchmark_csv_write.cpp  build_and_run_all.sh
benchmark/src/: CMakeLists.txt  benchmark_csv_read_lines.cpp  benchmark_csv_write_lines.cpp  line_read_throughput.cpp  line_read_throughput_simple.cpp  line_write_throughput.cpp
docs/html/: README_8md.html  annotated.html  benchmark__csv__read__lines_8cpp.html  benchmark__csv__read__lines_8cpp__incl.map  benchmark__csv__read__lines_8cpp__incl.md5  benchmark__csv__read__lines_8cpp_a54d05b0c53f86d5924fb46623d97b84a_cgraph.map  benchmark__csv__read__lines_8cpp_a54d05b0c53f86d5924fb46623d97b84a_cgraph.md5  benchmark__csv__read__lines_8cpp_source.html  benchmark__csv__write_8cpp.html  benchmark__csv__write_8cpp__incl.map  benchmark__csv__write_8cpp__incl.md5  benchmark__csv__write_8cpp_a69c410756e4dbc6302387cf5f6abf2c2_cgraph.map  benchmark__csv__write_8cpp_a69c410756e4dbc6302387cf5f6abf2c2_cgraph.md5  benchmark__csv__write_8cpp_source.html  benchmark__csv__write__lines_8cpp.html  benchmark__csv__write__lines_8cpp__incl.map  benchmark__csv__write__lines_8cpp__incl.md5  benchmark__csv__write__lines_8cpp_a8fd433443660170fe3bc361bdf768fc8_cgraph.map  benchmark__csv__write__lines_8cpp_a8fd433443660170fe3bc361bdf768fc8_cgraph.md5  benchmark__csv__write__lines_8cpp_source.html  classcsvio_1_1CSVMapReader-members.html  classcsvio_1_1CSVMapReader.html  classcsvio_1_1CSVMapReader__coll__graph.map  classcsvio_1_1CSVMapReader__coll__graph.md5  classcsvio_1_1CSVReader-members.html  classcsvio_1_1CSVReader.html  classcsvio_1_1CSVReader__coll__graph.map  classcsvio_1_1CSVReader__coll__graph.md5  classcsvio_1_1CSVReader_a39d320c5c0fd3330c0dc81cd7435334e_icgraph.map  classcsvio_1_1CSVReader_a39d320c5c0fd3330c0dc81cd7435334e_icgraph.md5  classcsvio_1_1CSVWriter-members.html  classcsvio_1_1CSVWriter.html  classcsvio_1_1CSVWriter__coll__graph.map  classcsvio_1_1CSVWriter__coll__graph.md5  classcsvio_1_1CSVWriter_a2ac79f23d6b026f24d5fd76163a55423_icgraph.map  classcsvio_1_1CSVWriter_a2ac79f23d6b026f24d5fd76163a55423_icgraph.md5  classcsvio_1_1CSVWriter_a50daac450717352fbdc1c45ed2dfe26f_icgraph.map  classcsvio_1_1CSVWriter_a50daac450717352fbdc1c45ed2dfe26f_icgraph.md5  classcsvio_1_1exceptional_1_1ColumnMismatchException-members.html  classcsvio_1_1exceptional_1_1ColumnMismatchException.html  (+239 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+7 more)
examples/alt_line_reader/: custom_line_reader.md  my_line_reader.hpp
examples/csv_logger/: logger.hpp  test.cpp
include/: .csv_io.hpp.swp  csv_io.hpp
include/csvio/: csvio.hpp
read_csvline_esc/: test.cpp  testreadline.csv
source/sample/: main.cpp
test/: .gitignore  CMakeLists.txt  Makefile  README.md  build_and_run_all.sh  test.cpp  test.csv  test_csv_input_parser.cpp  test_csv_line_reader.cpp  test_csv_line_writer.cpp  test_csv_map_reader.cpp  test_csv_output_formatter.cpp  test_csv_reader.cpp  test_csv_reader_ifstream.cpp  test_csv_simple_line_reader.cpp  test_csv_writer.cpp  test_csvio  test_escape_utils.cpp  test_line_reader.cpp  test_split_function.cpp
test/data/: test_data.csv
test/src/: CMakeLists.txt  test_csv_input_parser.cpp  test_csv_line_reader.cpp  test_csv_map_reader.cpp  test_csv_output_formatter.cpp  test_csv_reader.cpp  test_csv_reader_ifstream.cpp  test_csv_simple_line_reader.cpp
